2017-07-07 Frederic Schaer  <andrea.manzi@cern.ch>
        * change how certs are managed to restart Xrootd services if they change
2016-05-31 Frederic Schaer  <frederic.schaer@cea.fr>
        * completed support for CentOS7
        * xrootd service restarted if certificate updated
2016-01-18 Frederic Schaer  <frederic.schaer@cea.fr>
    	* Puppet 4 support
2015-12-10 Andrea Manzi <andrea.manzi@cern.ch>
        * added oss.statlib var
        * added cms.cidtag var
2015-09-15  Gerard Bernabeu <gerard1@fnal.gov>
        * Added some more config variables
	* instances_options now have -k fifo like default xrootd RPM
	* xrootd_instances_options array fixed and idented template content
	* all.manager converted in an array
	* Removed duplicated oss.localroot entry in xrootd.xfg.erb
2015-03-23  Andrea Manzi  <andrea.manzi@cern.ch>
	* added LD_LIBRARY_PATH conf for hdfs plugin