@@ -2,8 +2,8 @@
   "author": "puppet",
   "dependencies": [
     {
-      "name": "CERNOps/fetchcrl",
-      "version_requirement": "\u003e\u003d 0.2.2"
+      "name": "puppet/fetchcrl",
+      "version_requirement": "\u003e\u003d 1.1.1"
     },
     {
       "name": "puppetlabs/stdlib",
@@ -19,5 +19,5 @@
   "source": "https://github.com/cern-it-sdc-id/puppet-xrootd",
   "summary": "This module installs and configure a xrootd server",
   "tags": [],
-  "version": "0.2.2"
+  "version": "0.2.3"
 }
